# onetimesecret_django

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
onetimesecret/: admin.py  apps.py  forms.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
onetimesecret/migrations/: 0001_initial.py  0002_alter_secret_text.py
onetimesecret/templates/onetimesecret/: index.html  secret_created.html  secret_form.html  secret_page.html
