[tool.poetry]
name = "onetimesecret"
version = "0.1.0"
description = ""
authors = ["Kettariec <kettariec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
cryptography = "^42.0.7"
python-dotenv = "^1.0.1"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
django-cors-headers = "^4.3.1"
pytz = "^2024.1"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
